2011-02-13  Werner Koch  <wk@g10code.com>

	* rijndael.c (USE_AESNI): New.  Define for ia32 and gcc >= 4.
	(m128i_t) [USE_AESNI]: New.
	(RIJNDAEL_context) [USE_AESNI]: Add field use_aesni.
	(do_setkey): Set USE_AESNI for all key lengths.
	(prepare_decryption) [USE_AESNI]: Use aesimc instn if requested.
	(do_aesni_enc_aligned, do_aesni_dec_aligned)
	(do_aesni) [USE_AESNI]: New.
	(rijndael_encrypt, _gcry_aes_cfb_enc, _gcry_aes_cbc_enc)
	(rijndael_decrypt, _gcry_aes_cfb_dec)
	(_gcry_aes_cbc_dec) [USE_AESNI]: Use do_aesni.

2011-02-01  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_get_curve): New.
	(sexp_to_key): Add arg OVERRIDE_ELEMS.
	(sexp_elements_extract_ecc): Allow for params only.
	(gcry_pk_get_param): New.
	* ecc.c (ecc_get_curve): New.
	(ecc_get_param_sexp): New.

2011-01-28  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_genkey): Hack to insert the used curve name.

2011-01-27  Werner Koch  <wk@g10code.com>

	* ecc.c (fill_in_curve): Remove.
	(generate_curve): Rename to ..
	(fill_in_curve): this.  Remove setting of NAME_OID.
	(ecc_encrypt_raw): Change name of arg DATA to K for better
	readability.  Use ECC_public_key instead of ECC_secret_key.
	Require a caller to pass a complete pkey array.
	(ecc_decrypt_raw): Require a caller to pass a complete skey array.
	(elliptic_curve_t): Add field NAME.
	(fill_in_curve): Set field.
	(generate_key): Add arg R_USED_CURVE.
	(ecc_generate_ext): Return used curve name.

2011-01-13  Andrey Jivsov  <openpgp@brainhub.org>  (wk)

	* ecc.c (ec2os): Do not free passed parameters X and Y.  Adjust
	callers.
	(ecc_encrypt_raw, ecc_decrypt_raw): New.
	(ecdh_names, _gcry_pubkey_spec_ecdh): New.
	* pubkey.c (pubkey_table): Support ECDH.

2010-08-19  Werner Koch  <wk@g10code.com>

	* cipher.c (gcry_cipher_open): Remove double release of the module.
	Fixes bug#1263.

2010-06-10  Jeff Johnson  <n3npq@mac.com>  (wk)

	* ecc.c (ecc_generate_ext): Parse transient-key flag.